# agentic-ai

./: pyproject.toml  xml_to_json.py
agenticwork/: app.py
agenticwork/patchflows/: __init__.py
agenticwork/patchflows/AutoRemediate/: AutoRemediate.py  __init__.py  defaults.yml
agenticwork/patchflows/AutoUpgrade/: AutoUpgrade.py  __init__.py  defaults.yml
agenticwork/steps/: __init__.py
agenticwork/steps/CloneRepo/: CloneRepo.py
agenticwork/steps/CreatePR/: CreatePR.py  CreatePR_bkc.py
agenticwork/steps/NexusIqReport/: NexusIqReport.py  typed.py
agenticwork/steps/PR/: PR.py
